--- a/index.html
+++ b/index.html
@@ -1,19 +1,32 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8" />
+  <title>Airline Interview AI</title>
+</head>
+<body>
+
+<h1>Airline Interview AI</h1>
+<button onclick="startInterview()">Start Interview</button>
+
+<div id="chat"></div>
+
+<script>
 async function callInterviewAPI(messages) {
   const res = await fetch("/api/interview", {
     method: "POST",
     headers: { "Content-Type": "application/json" },
-    body: JSON.stringify({ messages }),
+    body: JSON.stringify({ messages })
   });
 
-  const text = await res.text();
-  let data;
-  try { data = JSON.parse(text); } catch { data = { raw: text }; }
-
-  if (!res.ok) {
-    const msg = data?.message || data?.error || data?.raw || "Unknown error";
-    throw new Error(`API ${res.status}: ${msg}`);
-  }
-
-  // meidän backend palauttaa { text: "..."}
+  const data = await res.json();
   return data.text;
 }
+
+function startInterview() {
+  alert("Interview started");
+}
+</script>
+
+</body>
+</html>
