--- a/index.html
+++ b/index.html
@@ -5,126 +5,88 @@
   <title>Airline Interview AI (Voice)</title>
   <style>
     body { font-family: system-ui, sans-serif; margin: 24px; max-width: 900px; }
-    button { padding: 10px 14px; }
-    #log { white-space: pre-wrap; border: 1px solid #ddd; padding: 12px; border-radius: 8px; margin-top: 12px; }
-    textarea { width: 100%; height: 160px; margin-top: 12px; }
+    button { padding: 10px 14px; font-size: 16px; }
+    #status { margin-top: 10px; }
   </style>
 </head>
 <body>
-  <h1>Airline Interview AI — Voice</h1>
-
+  <h1>Airline Interview AI – Voice</h1>
   <button id="start">Start voice interview</button>
   <div id="status">Idle</div>
 
-  <p><b>Prompt / system instructions (liitä sun 3.1 tähän):</b></p>
-  <textarea id="prompt"></textarea>
+<script>
+let pc, dc, audioEl;
 
-  <div id="log"></div>
+document.getElementById("start").addEventListener("click", start);
 
-  <script>
-    const logEl = document.getElementById("log");
-    const statusEl = document.getElementById("status");
-    const promptEl = document.getElementById("prompt");
+async function start() {
+  document.getElementById("status").innerText = "Starting...";
 
-    let pc, dc, audioEl;
+  // 1) Get ephemeral token from backend
+  const tokenRes = await fetch("/api/token");
+  const tokenData = await tokenRes.json();
+  const EPHEMERAL_KEY = tokenData.value;
 
-    function log(msg) {
-      logEl.textContent += msg + "\n";
-    }
+  if (!EPHEMERAL_KEY) {
+    alert("Token error");
+    return;
+  }
 
-    async function start() {
-      statusEl.textContent = "Starting…";
+  // 2) Create peer connection
+  pc = new RTCPeerConnection();
 
-      // 1) get ephemeral token from our server
-      const tokenRes = await fetch("/api/token");
-      const tokenData = await tokenRes.json();
-      const EPHEMERAL_KEY = tokenData.value; // OpenAI guide :contentReference[oaicite:4]{index=4}
-      if (!EPHEMERAL_KEY) {
-        log("Token error: " + JSON.stringify(tokenData));
-        statusEl.textContent = "Token failed";
-        return;
+  // Remote audio playback
+  audioEl = document.createElement("audio");
+  audioEl.autoplay = true;
+  document.body.appendChild(audioEl);
+  pc.ontrack = e => audioEl.srcObject = e.streams[0];
+
+  // Microphone
+  const ms = await navigator.mediaDevices.getUserMedia({ audio: true });
+  pc.addTrack(ms.getTracks()[0]);
+
+  // Data channel
+  dc = pc.createDataChannel("oai-events");
+
+  dc.onopen = () => {
+    document.getElementById("status").innerText = "Connected";
+
+    const instructions = `
+PASTE YOUR FULL INTERVIEW PROMPT HERE
+`;
+
+    dc.send(JSON.stringify({
+      type: "session.update",
+      session: {
+        instructions,
+        turn_detection: { type: "server_vad", silence_duration_ms: 1200 }
       }
-
-      // 2) create peer connection
-      pc = new RTCPeerConnection();
-
-      // remote audio playback
-      audioEl = document.createElement("audio");
-      audioEl.autoplay = true;
-      document.body.appendChild(audioEl);
-      pc.ontrack = (e) => { audioEl.srcObject = e.streams[0]; };
-
-      // local mic
-      const ms = await navigator.mediaDevices.getUserMedia({ audio: true });
-      pc.addTrack(ms.getTracks()[0]);
-
-      // data channel for events
-      dc = pc.createDataChannel("oai-events"); // OpenAI guide :contentReference[oaicite:5]{index=5}
-      dc.onopen = () => {
-        statusEl.textContent = "Connected (data channel open)";
-        log("Data channel open");
-
-        // 3) push your exact interview instructions
-        const instructions = promptEl.value?.trim() || "Conduct an airline interview simulation.";
-        dc.send(JSON.stringify({
-          type: "session.update",
-          session: {
-            instructions,
-            // keep it from interrupting constantly:
-            turn_detection: { type: "server_vad" }
-          }
-        }));
-
-        // 4) kick off with an opening question (model speaks)
-        dc.send(JSON.stringify({
-          type: "response.create",
-          response: {
-            modalities: ["audio", "text"],
-            instructions: "Aloita haastattelu lyhyellä aloituksella ja ensimmäisellä kysymyksellä."
-          }
-        }));
-      };
-
-      dc.onmessage = (e) => {
-        // Useful for debugging: server events
-        try {
-          const evt = JSON.parse(e.data);
-          if (evt.type) log("Event: " + evt.type);
-          // Optionally print partial text:
-          if (evt.type === "response.output_text.delta") log(evt.delta);
-        } catch {
-          // ignore
-        }
-      };
-
-      // 5) SDP offer/answer via OpenAI Realtime calls endpoint :contentReference[oaicite:6]{index=6}
-      const offer = await pc.createOffer();
-      await pc.setLocalDescription(offer);
-
-      const sdpRes = await fetch("https://api.openai.com/v1/realtime/calls", {
-        method: "POST",
-        body: offer.sdp,
-        headers: {
-          Authorization: `Bearer ${EPHEMERAL_KEY}`,
-          "Content-Type": "application/sdp"
-        }
-      });
-
-      const answer = { type: "answer", sdp: await sdpRes.text() };
-      await pc.setRemoteDescription(answer);
-
-      statusEl.textContent = "Running (voice)";
-      log("Voice session running.");
-    }
-
-    document.getElementById("start").addEventListener("click", () => start().catch(err => {
-      console.error(err);
-      log("ERROR: " + (err?.message || err));
-      statusEl.textContent = "Error";
     }));
 
-    // Put placeholder so you remember to paste your 3.1
-    promptEl.value = `LIITÄ TÄHÄN SUN 3.1 PROMPT (system instructions) 1:1.`;
-  </script>
+    dc.send(JSON.stringify({
+      type: "response.create",
+      response: {
+        modalities: ["audio"],
+        instructions: "Start the airline interview."
+      }
+    }));
+  };
+
+  const offer = await pc.createOffer();
+  await pc.setLocalDescription(offer);
+
+  const sdpRes = await fetch("https://api.openai.com/v1/realtime/calls", {
+    method: "POST",
+    body: offer.sdp,
+    headers: {
+      Authorization: `Bearer ${EPHEMERAL_KEY}`,
+      "Content-Type": "application/sdp"
+    }
+  });
+
+  const answer = { type: "answer", sdp: await sdpRes.text() };
+  await pc.setRemoteDescription(answer);
+}
+</script>
 </body>
 </html>
