--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <title>Airline Interview AI (Voice)</title>
+  <title>Airline Interview AI – Voice</title>
   <style>
     body { font-family: system-ui, sans-serif; margin: 24px; max-width: 900px; }
-    button { padding: 10px 14px; font-size: 16px; }
-    #status { margin-top: 10px; }
+    button { padding: 12px 16px; font-size: 16px; }
+    #status { margin-top: 12px; font-weight: bold; }
   </style>
 </head>
 <body>
   <h1>Airline Interview AI – Voice</h1>
-  <button id="start">Start voice interview</button>
+  <button id="start">Start Voice Interview</button>
   <div id="status">Idle</div>
 
 <script>
@@ -20,9 +20,10 @@ let pc, dc, audioEl;
 document.getElementById("start").addEventListener("click", start);
 
 async function start() {
-  document.getElementById("status").innerText = "Starting...";
+  const status = document.getElementById("status");
+  status.innerText = "Starting...";
 
-  // 1) Get ephemeral token from backend
+  // 1️⃣ Get ephemeral token from backend
   const tokenRes = await fetch("/api/token");
   const tokenData = await tokenRes.json();
   const EPHEMERAL_KEY = tokenData.value;
@@ -32,7 +33,7 @@ async function start() {
     return;
   }
 
-  // 2) Create peer connection
+  // 2️⃣ Create peer connection
   pc = new RTCPeerConnection();
 
   // Remote audio playback
@@ -41,18 +42,56 @@ async function start() {
   document.body.appendChild(audioEl);
   pc.ontrack = e => audioEl.srcObject = e.streams[0];
 
-  // Microphone
-  const ms = await navigator.mediaDevices.getUserMedia({ audio: true });
-  pc.addTrack(ms.getTracks()[0]);
+  // 3️⃣ Microphone input
+  const stream = await navigator.mediaDevices.getUserMedia({ audio: true });
+  pc.addTrack(stream.getTracks()[0]);
 
-  // Data channel
+  // 4️⃣ Data channel
   dc = pc.createDataChannel("oai-events");
 
   dc.onopen = () => {
-    document.getElementById("status").innerText = "Connected";
+    status.innerText = "Connected – Interview running";
 
     const instructions = `
-PASTE YOUR FULL INTERVIEW PROMPT HERE
+You are a three-member airline interview panel conducting a structured competency-based interview for a pilot position.
+
+This is a realistic interview simulation designed as a training tool for airline job preparation.
+
+CRITICAL REALTIME RULES:
+- Do NOT interrupt the candidate while they are speaking.
+- Wait until the candidate clearly stops speaking before responding.
+- Do NOT use filler acknowledgements.
+- Move directly to the next question after the candidate finishes.
+- Do NOT paraphrase answers unless clarification is required.
+- Maintain pacing consistent with a 40–50 minute airline screening interview.
+
+You are NOT a coach during the interview phase.
+You do NOT provide feedback during the interview.
+You do NOT provide model answers during the interview.
+Ask ONE primary question at a time.
+
+If the candidate asks for help:
+“In a real airline interview I cannot coach you. Please answer using a real example.”
+
+If the candidate tries to skip a question:
+Rephrase and ask again.
+
+INTERVIEW STRUCTURE:
+- Calibration
+- HR & Fit
+- Behavioural (must cover all competencies)
+- Technical (4–6 questions)
+- Motivation & Realism
+- Debrief
+
+Behavioural section must be the longest part.
+Do not move to technical before all competencies are covered.
+
+Start with:
+
+“We will conduct an airline interview simulation. Please answer using real examples from your experience.”
+
+Then begin Phase 1.
 `;
 
     dc.send(JSON.stringify({
@@ -67,11 +106,12 @@ PASTE YOUR FULL INTERVIEW PROMPT HERE
       type: "response.create",
       response: {
         modalities: ["audio"],
-        instructions: "Start the airline interview."
+        instructions: "Start the interview."
       }
     }));
   };
 
+  // 5️⃣ SDP exchange
   const offer = await pc.createOffer();
   await pc.setLocalDescription(offer);
 
