--- a/index.html
+++ b/index.html
@@ -1,135 +1,94 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8" />
-<title>Airline Interview AI – Voice</title>
-<style>
-body { font-family: system-ui, sans-serif; margin: 24px; max-width: 900px; }
-button { padding: 12px 16px; font-size: 16px; }
-#status { margin-top: 12px; font-weight: bold; }
-</style>
+  <meta charset="UTF-8" />
+  <title>Airline Interview AI</title>
 </head>
-
 <body>
-<h1>Airline Interview AI – Voice</h1>
-<button id="start">Start Voice Interview</button>
-<div id="status">Idle</div>
+
+<h1>Airline Interview AI</h1>
+<button id="startBtn">Start Interview</button>
+<button id="stopBtn" disabled>Stop</button>
 
 <script>
-let pc, dc, audioEl;
+let pc;
+let localStream;
+let dataChannel;
 
-document.getElementById("start").addEventListener("click", start);
+const startBtn = document.getElementById("startBtn");
+const stopBtn = document.getElementById("stopBtn");
 
-async function start() {
-  const status = document.getElementById("status");
-  status.innerText = "Starting...";
+startBtn.onclick = async () => {
+  startBtn.disabled = true;
+  stopBtn.disabled = false;
 
-  // 1️⃣ Get ephemeral token
-  const tokenRes = await fetch("/api/token");
-  const tokenData = await tokenRes.json();
-  const EPHEMERAL_KEY = tokenData.value;
+  // 1️⃣ Get ephemeral token from backend
+  const tokenResponse = await fetch("/api/realtime-token", { method: "POST" });
+  const tokenData = await tokenResponse.json();
 
-  if (!EPHEMERAL_KEY) {
-    alert("Token error. Check /api/token and API key.");
+  const ephemeralKey = tokenData.client_secret?.value;
+
+  if (!ephemeralKey) {
+    alert("Failed to get realtime token");
     return;
   }
 
-  // 2️⃣ Create peer connection
+  // 2️⃣ Create WebRTC connection
   pc = new RTCPeerConnection();
 
-  // Remote audio playback
-  audioEl = document.createElement("audio");
-  audioEl.autoplay = true;
-  document.body.appendChild(audioEl);
-  pc.ontrack = e => audioEl.srcObject = e.streams[0];
+  // 3️⃣ Play AI audio
+  const audio = document.createElement("audio");
+  audio.autoplay = true;
+  pc.ontrack = e => audio.srcObject = e.streams[0];
 
-  // 3️⃣ Microphone
-  const stream = await navigator.mediaDevices.getUserMedia({ audio: true });
-  pc.addTrack(stream.getTracks()[0]);
+  // 4️⃣ Get microphone
+  localStream = await navigator.mediaDevices.getUserMedia({ audio: true });
+  for (const track of localStream.getTracks()) {
+    pc.addTrack(track, localStream);
+  }
 
-  // 4️⃣ Data channel
-  dc = pc.createDataChannel("oai-events");
+  // 5️⃣ Data channel (optional)
+  dataChannel = pc.createDataChannel("oai-events");
 
-  dc.onopen = () => {
-    status.innerText = "Connected – Interview running";
-
-    const instructions = `
-REALTIME STABILITY RULES (CRITICAL):
-- Never interrupt while the candidate is speaking.
-- Wait clearly until the candidate has fully stopped before responding.
-- Do not use filler acknowledgements.
-- Maintain pacing equivalent to a 40–50 minute airline screening interview.
-- Internally track which competencies have been covered.
-- Do NOT transition to technical segment until ALL required competencies have been covered.
-- If unsure whether enough depth has been achieved, ask one additional behavioural scenario.
-- Do not prematurely move to debrief.
-
-────────────────────────
-
-You are a three-member airline interview panel conducting a structured competency-based interview for a pilot position.
-
-This is a realistic interview simulation designed as a training tool for airline job preparation.
-
-You are not a coach during the interview phase.
-You do not provide feedback during the interview.
-You do not provide model answers during the interview.
-Ask one question per time.
-Do not announce the phase.
-Do not use filler acknowledgements.
-After the candidate finishes speaking, move directly to the next question or follow-up without verbal acknowledgement.
-Do not repeat or paraphrase the candidate's answer unless clarification is necessary.
-
-INTERVIEW STRUCTURE:
-- Calibration
-- HR & Fit
-- Behavioural (must cover all competencies)
-- Technical (4–6 questions)
-- Motivation & Realism
-- Debrief
-
-Minimum behavioural requirement:
-- 8 primary behavioural questions (one per competency)
-- Behavioural section must be the longest part
-
-Start with:
-“We will conduct an airline interview simulation. Please answer using real examples from your experience.”
-
-Proceed through all phases exactly as defined.
-`;
-
-    dc.send(JSON.stringify({
-      type: "session.update",
-      session: {
-        instructions,
-        turn_detection: { type: "server_vad", silence_duration_ms: 1500 }
-      }
-    }));
-
-    dc.send(JSON.stringify({
-      type: "response.create",
-      response: {
-        modalities: ["audio"],
-        instructions: "Start the interview."
-      }
-    }));
-  };
-
-  // 5️⃣ SDP exchange
+  // 6️⃣ Create offer
   const offer = await pc.createOffer();
   await pc.setLocalDescription(offer);
 
-  const sdpRes = await fetch("https://api.openai.com/v1/realtime/calls", {
+  // 7️⃣ Send offer to OpenAI Realtime endpoint
+  const baseUrl = "https://api.openai.com/v1/realtime";
+  const model = "gpt-4o-realtime-preview";
+
+  const sdpResponse = await fetch(`${baseUrl}?model=${model}`, {
     method: "POST",
-    body: offer.sdp,
     headers: {
-      Authorization: `Bearer ${EPHEMERAL_KEY}`,
+      Authorization: `Bearer ${ephemeralKey}`,
       "Content-Type": "application/sdp"
-    }
+    },
+    body: offer.sdp
   });
 
-  const answer = { type: "answer", sdp: await sdpRes.text() };
-  await pc.setRemoteDescription(answer);
-}
+  const answerSDP = await sdpResponse.text();
+
+  await pc.setRemoteDescription({ type: "answer", sdp: answerSDP });
+
+  console.log("Realtime interview started");
+};
+
+stopBtn.onclick = () => {
+  stopBtn.disabled = true;
+  startBtn.disabled = false;
+
+  if (pc) {
+    pc.close();
+  }
+
+  if (localStream) {
+    localStream.getTracks().forEach(track => track.stop());
+  }
+
+  console.log("Interview stopped");
+};
 </script>
+
 </body>
 </html>
