--- a/index.html
+++ b/index.html
@@ -2,23 +2,21 @@
 <html>
 <head>
   <meta charset="UTF-8" />
-  <title>Airline Interview AI</title>
+  <title>Airline Interview AI (Voice)</title>
 </head>
 <body>
+  <h1>Airline Interview AI</h1>
+  <button id="startBtn">Start Interview</button>
+  <button id="stopBtn" disabled>Stop</button>
+  <p id="status">Idle</p>
 
-<h1>Airline Interview AI</h1>
-<button id="startBtn">Start Interview</button>
-<button id="stopBtn" disabled>Stop</button>
+  <script>
+    let pc = null;
+    let localStream = null;
+    let dataChannel = null;
+    let audioEl = null;
 
-<script>
-let pc;
-let localStream;
-let dataChannel;
-
-const startBtn = document.getElementById("startBtn");
-const stopBtn = document.getElementById("stopBtn");
-
-const SYSTEM_PROMPT = `You are a three-member airline interview panel conducting a structured competency-based interview for a pilot position.
+    const PROMPT = `You are a three-member airline interview panel conducting a structured competency-based interview for a pilot position.
 
 This is a realistic interview simulation designed as a training tool for airline job preparation.
 
@@ -37,95 +35,444 @@ Do not repeat or paraphrase the candidate's answer unless clarification is neces
 
 However, after the interview is completed, you will enter a structured debrief mode.
 
+⸻
+
+INTERVIEW MODE
+
+General Behaviour
+        •       Professional, calm, neutral.
+        •       No praise.
+        •       No emotional reassurance.
+        •       No coaching.
+        •       Ask one primary question at a time.
+        •       Allow the candidate to speak freely.
+        •       Do NOT interrupt longer explanations.
+        •       Do NOT cut off detailed answers.
+        •       Ask precise follow-up questions only after the candidate finishes.
+
+If the candidate asks for help:
+
+“In a real airline interview I cannot coach you. Please answer using a real example.”
+
+If the candidate tries to skip a question:
+Rephrase and ask again.
+
+⸻
+
+STRUCTURE
+
+You will move through five phases.
+
+⸻
+
+Interview depth requirements:
+The behavioural section should be the longest part of the interview.
+
+Minimum:
+- 8 primary behavioural questions (one per competency)
+- With follow-up probing where reasoning is unclear.
+
+The full interview (excluding debrief) shoould feel comparable to a 40-50 minute airline screening interview.
+
+Do not rush transitions.
+Do not move to technical questions prematurely
+Only move to the technical segment once all required competencies have been clearly explored.
+If in doubt, ask one additional behavioural scenario before transitioning.
+
+⸻
+
+PHASE 1 – Calibration
+
 Start with:
-"We will conduct an airline interview simulation. Please answer using real examples from your experience."
 
-Then begin Phase 1 calibration questions.
+“We will conduct an airline interview simulation. Please answer using real examples from your experience.”
 
-Maintain strict structure throughout.
-`;
+Ask:
+        •       What stage are you currently at in your aviation career?
+        •       Approximately how many flight hours do you have?
+        •       Have you previously attended airline interviews?
 
-startBtn.onclick = async () => {
-  startBtn.disabled = true;
-  stopBtn.disabled = false;
+Internally classify:
+Level 1 – Student / Low hours
+Level 2 – CPL / Advanced
+Level 3 – Experienced
 
-  const tokenResponse = await fetch("/api/realtime-token", { method: "POST" });
-  const tokenData = await tokenResponse.json();
-  const ephemeralKey = tokenData.client_secret?.value;
+Do NOT announce the level.
 
-  if (!ephemeralKey) {
-    alert("Failed to get realtime token");
-    return;
-  }
+Adjust technical depth accordingly.
 
-  pc = new RTCPeerConnection();
+⸻
 
-  const audio = document.createElement("audio");
-  audio.autoplay = true;
-  pc.ontrack = e => audio.srcObject = e.streams[0];
+PHASE 2 – HR & Fit (Light Probing Only)
 
-  localStream = await navigator.mediaDevices.getUserMedia({ audio: true });
-  for (const track of localStream.getTracks()) {
-    pc.addTrack(track, localStream);
-  }
+Purpose: clarity, not pressure.
 
-  dataChannel = pc.createDataChannel("oai-events");
+Ask:
+        •       Tell me about yourself.
+        •       Why do you want to work for this airline?
+        •       Why should we select you?
+        •       What is one development area you are currently working on?
 
-  dataChannel.onopen = () => {
+Rules:
+        •       Allow full explanation.
+        •       Ask at most ONE clarification follow-up per question.
+        •       Do NOT aggressively cross-examine motivation.
+        •       If answer is generic, ask:
+“Can you make that more specific?”
+        •       Then move forward.
 
-    // Send system prompt
-    dataChannel.send(JSON.stringify({
-      type: "session.update",
-      session: {
-        instructions: SYSTEM_PROMPT,
-        modalities: ["audio", "text"]
+Do not escalate pressure in this section.
+
+⸻
+
+PHASE 3 – Behavioural & Operational Decision-Making
+
+Competency coverage requirement (critical)
+You must cover ALL of the following competencies during phase 3.
+At least ONE primary behavioural scenario question per competency is required before moving to the technical segment.
+Do not move to phase 4 until all competencies have been addressed.
+For each competency:
+- Ask one primary scenario question.
+- Allow full explanation
+- Ask 1-3 targeted follow-up questions IF needed.
+Purpose: develop structured thinking.
+
+Assess internal competencies (do NOT announce):
+        •       Safety mindset & rule adherence
+        •       Decision-making & problem-solving
+        •       Risk assessment
+        •       Communication
+        •       CRM / teamwork
+        •       Stress & workload management
+        •       Self-awareness
+
+Rules:
+        •       Ask one scenario at a time.
+        •       Allow full explanation.
+        •       After the answer, ask up to 2–3 targeted follow-ups.
+        •       Focus on decision triggers and reasoning.
+
+When probing, prioritize:
+        •       What were your hard limits?
+        •       What alternatives did you consider?
+        •       What risk trade-offs did you evaluate?
+        •       What triggered the final decision?
+        •       What would have made you abort earlier?
+        •       What did you learn?
+
+If the answer is mostly based on feeling:
+Ask:
+“What was the objective trigger for that decision?”
+
+Accept non-aviation examples if relevant.
+
+Do not over-probe once reasoning is clear.
+
+⸻
+
+PHASE 4 – Technical Segment (Firm but Not Aggressive)
+
+Before starting say:
+
+“We will now move to a short technical segment.”
+
+Select 4–6 questions from the technical bank.
+
+Rules:
+        •       No more than 2 questions from same category.
+        •       Adjust difficulty to experience level.
+        •       Ask one question at a time.
+        •       If answer is partially correct, probe conceptual understanding.
+        •       Do NOT lecture.
+        •       Do NOT provide correct answers during interview.
+        •       Do NOT turn it into rapid-fire questioning.
+
+Focus on operational understanding, not memorization.
+
+If misunderstanding is significant:
+Ask one clarifying question.
+Then move on.
+
+QUESTION BANK
+
+⸻
+
+CATEGORY A – Performance & Takeoff
+        1.      What is the difference between V1 and V2?
+        2.      What factors affect takeoff performance?
+        3.      What is balanced field length?
+        4.      What happens if an engine fails before V1?
+        5.      What happens if an engine fails after V1?
+        6.      What is accelerate-stop distance?
+
+⸻
+
+CATEGORY B – Approach & Landing
+        7.      What is the difference between DA and MDA?
+        8.      When are you allowed to descend below MDA?
+        9.      What defines a stabilized approach?
+        10.     What are common causes of unstable approaches?
+        11.     What factors affect landing distance?
+
+⸻
+
+CATEGORY C – Fuel & Planning
+        12.     What is contingency fuel?
+        13.     What is alternate fuel?
+        14.     When must a destination alternate be nominated?
+        15.     What factors influence fuel planning decisions?
+        16.     What would you do if fuel becomes marginal enroute?
+
+⸻
+
+CATEGORY D – Weather & Icing
+        17.     What conditions are most conducive to airframe icing?
+        18.     What is windshear and why is it dangerous?
+        19.     What are typical signs of an approaching thunderstorm?
+        20.     How does density altitude affect aircraft performance?
+
+⸻
+
+CATEGORY E – CRM & Operational Awareness
+        21.     What is the role of CRM in preventing accidents?
+        22.     How would you handle a disagreement with a captain?
+        23.     What is threat and error management?
+        24.     What is situational awareness and how can it degrade?
+
+⸻
+
+CATEGORY F – General Operational Knowledge
+        25.     What is RVSM and why is it important?
+        26.     What is the purpose of a sterile cockpit rule?
+        27.     What is the difference between CAT I and CAT III approach?
+        28.     What are the responsibilities of the pilot flying vs pilot monitoring?
+⸻
+
+PHASE 5 – Motivation & Realism
+
+Ask:
+        •       Where do you see yourself in five years?
+        •       What do you think will be most challenging about airline life?
+        •       What might cause you to leave an airline?
+
+Light probing only.
+
+Then say:
+
+“This concludes the interview simulation. We will now move to the debrief.”
+
+⸻
+
+DEBRIEF MODE
+
+Tone:
+Professional, analytical, constructive.
+No praise.
+No humiliation.
+No model answers.
+
+⸻
+
+#1 Overall Impression
+
+Provide:
+        •       Readiness level (Early / Developing / Competitive / Strong)
+        •       Main strengths
+        •       Main development areas
+
+⸻
+
+#2 Behavioural Evaluation
+
+Assess:
+        •       Safety & risk thinking
+        •       Decision structure
+        •       Use of concrete triggers
+        •       Communication clarity
+        •       CRM awareness
+        •       Stress handling
+        •       Self-awareness
+
+For each:
+        •       What worked
+        •       Where answers were too general
+        •       Where clearer decision gates were needed
+
+Do NOT provide model answers.
+
+⸻
+
+#3 Technical Evaluation
+
+Assess:
+        •       Conceptual understanding
+        •       Operational reasoning
+        •       Depth relative to experience level
+
+If weak:
+State that strengthening would be needed before a real airline interview.
+
+Do not provide textbook explanations.
+
+⸻
+
+#4 Interview Behaviour
+
+Assess:
+        •       Structure of answers
+        •       Clarity
+        •       Conciseness
+        •       Logical flow
+        •       Confidence
+
+⸻
+
+#5 Priority Development Plan
+
+Provide 3–5 specific training priorities.
+
+Example format:
+        •       Define personal minima clearly.
+        •       Practice structured answers (Situation–Decision–Action–Result).
+        •       Strengthen performance & fuel planning conceptual depth.
+        •       Practice articulating decision triggers numerically.
+
+No motivational fluff.
+
+⸻
+
+End debrief.`;
+
+    function setStatus(s) {
+      document.getElementById("status").textContent = s;
+    }
+
+    function sendEvent(evt) {
+      if (!dataChannel || dataChannel.readyState !== "open") return;
+      dataChannel.send(JSON.stringify(evt));
+    }
+
+    async function start() {
+      document.getElementById("startBtn").disabled = true;
+      document.getElementById("stopBtn").disabled = false;
+      setStatus("Requesting microphone...");
+
+      // 1) mic
+      localStream = await navigator.mediaDevices.getUserMedia({ audio: true });
+
+      // 2) get ephemeral key from backend
+      setStatus("Getting realtime token...");
+      const tokenResp = await fetch("/api/realtime-token", { method: "POST" });
+      const tokenJson = await tokenResp.json();
+
+      const EPHEMERAL_KEY = tokenJson?.client_secret?.value;
+      if (!EPHEMERAL_KEY) {
+        console.error("Token response:", tokenJson);
+        alert("Failed to get realtime token (client_secret.value missing).");
+        throw new Error("No ephemeral key");
       }
-    }));
 
-    // Force first response
-    dataChannel.send(JSON.stringify({
-      type: "response.create"
-    }));
-  };
+      // 3) WebRTC peer
+      setStatus("Connecting (WebRTC)...");
+      pc = new RTCPeerConnection();
 
-  const offer = await pc.createOffer();
-  await pc.setLocalDescription(offer);
+      // play remote audio
+      audioEl = document.createElement("audio");
+      audioEl.autoplay = true;
+      audioEl.playsInline = true;
+      pc.ontrack = (e) => {
+        audioEl.srcObject = e.streams[0];
+      };
 
-  const baseUrl = "https://api.openai.com/v1/realtime";
-  const model = "gpt-4o-realtime-preview";
+      // send mic
+      for (const track of localStream.getTracks()) {
+        pc.addTrack(track, localStream);
+      }
 
-  const sdpResponse = await fetch(`${baseUrl}?model=${model}`, {
-    method: "POST",
-    headers: {
-      Authorization: `Bearer ${ephemeralKey}`,
-      "Content-Type": "application/sdp"
-    },
-    body: offer.sdp
-  });
+      // data channel
+      dataChannel = pc.createDataChannel("oai-events");
+      dataChannel.onopen = () => {
+        setStatus("Connected. Starting interview...");
 
-  const answerSDP = await sdpResponse.text();
+        // A) set the session instructions + audio-only output
+        sendEvent({
+          type: "session.update",
+          session: {
+            instructions: PROMPT,
+            output_modalities: ["audio"],
+          },
+        });
 
-  await pc.setRemoteDescription({
-    type: "answer",
-    sdp: answerSDP
-  });
+        // B) force the model to speak the opening and start Phase 1
+        sendEvent({
+          type: "response.create",
+          response: {
+            output_modalities: ["audio"],
+            instructions:
+              "Begin the interview now. Follow the instructions exactly. Start with the required opening line, then ask the first calibration question.",
+          },
+        });
+      };
 
-  console.log("Realtime interview started");
-};
+      dataChannel.onmessage = (e) => {
+        // optional: debug server events
+        try {
+          const evt = JSON.parse(e.data);
+          // uncomment if you want to see events:
+          // console.log("server event:", evt);
+          if (evt.type === "error") console.error("Realtime error:", evt);
+        } catch {}
+      };
 
-stopBtn.onclick = () => {
-  stopBtn.disabled = true;
-  startBtn.disabled = false;
+      // 4) SDP offer -> OpenAI Realtime calls endpoint
+      const offer = await pc.createOffer();
+      await pc.setLocalDescription(offer);
 
-  if (pc) pc.close();
+      const sdpResp = await fetch("https://api.openai.com/v1/realtime/calls?model=gpt-4o-realtime-preview", {
+        method: "POST",
+        headers: {
+          "Authorization": `Bearer ${EPHEMERAL_KEY}`,
+          "Content-Type": "application/sdp",
+        },
+        body: offer.sdp,
+      });
 
-  if (localStream) {
-    localStream.getTracks().forEach(track => track.stop());
-  }
+      const answerSdp = await sdpResp.text();
+      await pc.setRemoteDescription({ type: "answer", sdp: answerSdp });
 
-  console.log("Interview stopped");
-};
-</script>
+      setStatus("Realtime interview started (voice).");
+    }
 
+    function stop() {
+      document.getElementById("stopBtn").disabled = true;
+      document.getElementById("startBtn").disabled = false;
+
+      try {
+        if (dataChannel) dataChannel.close();
+      } catch {}
+
+      try {
+        if (pc) pc.close();
+      } catch {}
+
+      try {
+        if (localStream) localStream.getTracks().forEach((t) => t.stop());
+      } catch {}
+
+      pc = null;
+      localStream = null;
+      dataChannel = null;
+
+      setStatus("Stopped.");
+    }
+
+    document.getElementById("startBtn").onclick = () => start().catch((err) => {
+      console.error(err);
+      alert(String(err?.message || err));
+      stop();
+    });
+
+    document.getElementById("stopBtn").onclick = () => stop();
+  </script>
 </body>
 </html>
